--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "redux-persist": "^6.0.0",
+    "sass": "^1.34.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
